<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pingerful</string>
    <string name="hello_world">The best pinger in the world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_host">Add</string>
    <string name="btn_test_notification">Notification</string>
    <string name="refresh_hosts_action_bar">Stop</string>
    <string name="pref_use_notification_title">Use notifications</string>
    <string name="pref_use_notification_summary">Show notification in status bar when ping is failed</string>
    <string name="pref_notifications_group_title">Notifications</string>
    <string name="pref_ping_mode_group_title">Ping mode</string>
    <string name="pref_ping_interval_title">Ping interval</string>
    <string name="pref_ping_interval">pref_ping_interval</string>
    <string name="preferences_file_key">preferences_file_key</string>
    <string name="pref_ping_automatically">pref_ping_automatically</string>
    <string name="pref_ping_automatically_title">Ping automatically</string>
    <string name="pref_ping_automatically_summary">Ping hosts automatically or manually. In manual mode notifications aren\'t thrown.</string>
    <string name="cancel_add_host_button">Cancel</string>
    <string name="host_name_or_ip_title">Host Name or IP</string>
    <string name="check_host_button_title_add_host_dialog">Check Host</string>
    <string name="ping_all_button_text_main_activity">Force Ping</string>
    <string name="host_name_or_ip_required_error_message">Host name or IP is required</string>
    <string name="add_host_dialog_fragment_tag">addHostDialog</string>
    <string name="checkbox_skip_host_title">Active</string>
    <string name="delete_host_dialog_tag">delete_host_dialog_tag</string>
    <string name="checkbox_notify_ping_fails">Notify ping fails</string>
    <string name="pref_notification_host_back_online">pref_notification_host_back_online</string>
    <string name="pref_notification_host_back_online_title">Notify host online</string>
    <string name="pref_button_set_ping_fails_notification_ringtone">pref_button_set_ping_fails_notification_ringtone</string>
    <string name="pref_button_set_ping_fails_notification_ringtone_title">Host offline ringtone</string>
    <string name="pref_button_set_host_online_notification_ringtone">pref_button_set_host_online_notification_ringtone</string>
    <string name="pref_button_set_host_online_notification_ringtone_title">Host online ringtone</string>
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="port_number_title_add_host">Port number</string>
    <string name="checkbox_check_port_only_text">Check port only</string>
    <string name="host_title_text_edit_host">Host Title</string>
    <string name="checkbox_show_title_only_add_host_title">Show title only</string>
    <string name="pref_pings_count">pref_pings_count</string>
    <string name="pref_pings_count_title">Pings count</string>

</resources>
