<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
>

    <TextView android:text="Title" />
    <EditText
        android:id="@+id/edit_host_title_add_host"
        android:inputType="text"
    >
        <requestFocus />
    </EditText>

    <LinearLayout android:orientation="horizontal">
        <TextView
            android:text="@string/host_name_or_ip_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
        />
        <TextView
            android:text=" *"
            android:textColor="#FF0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
    </LinearLayout>


    <EditText
        android:id="@+id/edit_host_ip_add_host"
        android:inputType="textNoSuggestions|textEmailAddress"
    >
    </EditText>



    <TableRow>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
        >
            <TextView
                android:text="@string/port_number_title_add_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
            />
            <EditText
                android:id="@+id/edit_port_number_add_host"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
            />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox_notify_ping_fails"
            android:text="@string/checkbox_notify_ping_fails"
            android:checked="false"
            android:layout_gravity="center_vertical"
        />

    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/checkbox_is_active_add_host"
            android:text="@string/checkbox_skip_host_title"
            android:checked="true"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
        />

        <LinearLayout
            android:layout_gravity="right"
            android:layout_weight="0"
        >
            <ImageView
                android:id="@+id/host_status_image_add_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="4dp"
                android:visibility="gone"
                android:src="@drawable/ok_green_32px"
            />

            <ProgressBar
                android:id="@+id/progress_spinner_check_host_add_host_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_vertical|right"
                android:visibility="gone"
            />

            <Button

                android:id="@+id/check_host_add_host"
                android:text="@string/check_host_button_title_add_host_dialog"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical|right"

            />
        </LinearLayout>

    </TableRow>

</TableLayout>