<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_title_text_edit_host" />

        <EditText
            android:id="@+id/edit_host_title_add_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host_name_or_ip_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" *"
                android:textColor="#FF0000" />
        </LinearLayout>

        <EditText
            android:id="@+id/edit_host_ip_add_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions|textEmailAddress" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port_number_title_add_host" />

                <EditText
                    android:id="@+id/edit_port_number_add_host"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkbox_check_port_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/checkbox_check_port_only_text"
                android:checked="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:id="@+id/button_check_host_add_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/check_host_button_title_add_host_dialog"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_view_ip_edit_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|fill_horizontal"
                android:textSize="18sp"
                android:onClick="onIpAddressTextViewClick"
                android:clickable="true"
                />

            <ImageView
                android:id="@+id/host_status_image_add_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ok_green_32px"
                android:visibility="invisible"
                android:contentDescription="Host online / offline status" />

            <ProgressBar
                android:id="@+id/progress_spinner_check_host_add_host_dialog"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox_is_active_add_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/checkbox_skip_host_title"


                />

            <CheckBox
                android:id="@+id/checkbox_notify_ping_fails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:checked="false"
                android:text="@string/checkbox_notify_ping_fails" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>